// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Waiting view can be removed 1`] = `<div />`;

exports[`Waiting view can be shown 1`] = `
<div>
  <div
    class="lightmill-base-app lightmill-base-app-crash"
  >
    <div
      class="lightmill-banner"
    >
      <h1>
        Something went wrong
      </h1>
      <div>
        Please call your experimenter.
      </div>
    </div>
    <div
      class="lightmill-details"
    >
      <h3>
        Run unknown
      </h3>
      <h4
        class="lightmill-message"
      >
        message
      </h4>
      <pre
        class="lightmill-stack"
      >
        err stack
      </pre>
    </div>
    <a
      class="lightmill-details-button"
      href="#"
    >
      show details
    </a>
  </div>
</div>
`;

exports[`Waiting view can display additional details on the error 1`] = `
<div>
  <div
    class="lightmill-base-app lightmill-base-app-crash lightmill-with-details"
  >
    <div
      class="lightmill-banner"
    >
      <h1>
        Something went wrong
      </h1>
      <div>
        Please call your experimenter.
      </div>
    </div>
    <div
      class="lightmill-details"
    >
      <h3>
        Run unknown
      </h3>
      <h4
        class="lightmill-message"
      >
        message
      </h4>
      <pre
        class="lightmill-stack"
      >
        err stack
      </pre>
    </div>
    <a
      class="lightmill-details-button"
      href="#"
    >
      show details
    </a>
  </div>
</div>
`;
